[gd_scene load_steps=2 format=3 uid="uid://dt7aadsbd1vva"]

[ext_resource type="Script" uid="uid://kmve7q32252f" path="res://Scenes/Scripts/MainMenuScreen.gd" id="1_3u677"]

[node name="MainMenuScene" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_3u677")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 1151.0
offset_bottom = 649.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="LaCreaturaButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "La Creatura"

[node name="ShopButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Shop"

[node name="ExitButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Exit
"
